--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -7,6 +7,9 @@ appender.console.layout.pattern = [%d{yy-MMM-dd HH:mm:ss:SSS}] [%p] [%c{1}:%L] -
 
 rootLogger.level = info
 
+logger.troll.name=oni.discord.troll
+logger.troll.level=debug
+
 rootLogger.appenderRefs = abc
 
 rootLogger.appenderRef.abc.ref = myOutput
